Fixed "overflow" error + changed a LOT of things (design and backend -wise)

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -109,3 +109,7 @@ nav .info-points img {
 .big-username {
     font-size: 54px;
 }
+
+.nice-blue {
+  color: #3498db;
+}
